--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Basil's Portfolio</h1>
     <h2>I am an AI Engineer</h2>
     <hr>
-    <h3><a href="public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="movie-ranking.png" height="200" alt="Webpage image">
     
     <h3><a href="birthday-invite.html">Birthday Invitation</a></h3>
